fixed hover 1px jump.

--- a/src/css/selectors/TableRichSelector.less
+++ b/src/css/selectors/TableRichSelector.less
@@ -37,6 +37,7 @@
         text-align: center;
         display: inline-block;
         width: 1.2em;
+        vertical-align: top;
         &:before {
             visibility: hidden;
         }
